# parity-wasm

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  index.html  justfile  search-index.js  settings.html  source-files.js
.github/: CODEOWNERS
.github/workflows/: check.yml
benches/: interpreter.rs
examples/: bench-decoder.rs  build.rs  data.rs  exports.rs  info.rs  inject.rs  interpret.rs  interpret_mul_args.rs  invoke.rs  roundtrip.rs  show.rs  tictactoe.rs
fuzz/: Cargo.toml  build.rs
fuzz/fuzz_targets/: deserialize.rs  fuzz_decode.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
parity_wasm/: all.html  fn.peek_size.html  index.html
parity_wasm/builder/: fn.export.html  fn.from_module.html  fn.function.html  fn.global.html  fn.import.html  fn.module.html  fn.signature.html  fn.signatures.html  index.html  sidebar-items.js  struct.DataSegmentBuilder.html  struct.ExportBuilder.html  struct.ExportInternalBuilder.html  struct.FuncBodyBuilder.html  struct.FunctionBuilder.html  struct.FunctionDefinition.html  struct.GlobalBuilder.html  struct.Identity.html  struct.ImportBuilder.html  struct.MemoryBuilder.html  struct.ModuleBuilder.html  struct.SignatureBuilder.html  struct.SignaturesBuilder.html  struct.TableBuilder.html  struct.TableDefinition.html  struct.TableEntryDefinition.html  struct.TypeRefBuilder.html
parity_wasm/elements/: enum.BlockType.html  enum.Error.html  enum.External.html  enum.ImportCountType.html  enum.Instruction.html  enum.Internal.html  enum.RelocationEntry.html  enum.Section.html  enum.TableElementType.html  enum.Type.html  enum.ValueType.html  fn.deserialize_buffer.html  fn.deserialize_file.html  fn.peek_size.html  fn.serialize.html  fn.serialize_to_file.html  index.html  sidebar-items.js  struct.BrTableData.html  struct.CodeSection.html  struct.CountedList.html  struct.CountedListWriter.html  struct.CountedWriter.html  struct.CustomSection.html  struct.DataSection.html  struct.DataSegment.html  struct.ElementSection.html  struct.ElementSegment.html  struct.ExportEntry.html  struct.ExportSection.html  struct.Func.html  struct.FuncBody.html  struct.FunctionNameSubsection.html  struct.FunctionSection.html  struct.FunctionType.html  struct.GlobalEntry.html  struct.GlobalSection.html  struct.GlobalType.html  struct.ImportEntry.html  struct.ImportSection.html  (+29 more)
pwasm-emscripten/: Cargo.toml
pwasm-emscripten/src/: lib.rs
res/cases/v1/: const.wasm  const.wast  (+10 more)
spec/: Cargo.toml
spec/gcc-torture/: 20000112-1.c.s.wast.wasm  20000113-1.c.s.wast.wasm  20000121-1.c.s.wast.wasm  20000205-1.c.s.wast.wasm  20000217-1.c.s.wast.wasm  20000223-1.c.s.wast.wasm  20000224-1.c.s.wast.wasm  20000225-1.c.s.wast.wasm  20000313-1.c.s.wast.wasm  20000314-1.c.s.wast.wasm  20000314-2.c.s.wast.wasm  20000314-3.c.s.wast.wasm  20000403-1.c.s.wast.wasm  20000412-1.c.s.wast.wasm  20000412-2.c.s.wast.wasm  20000412-3.c.s.wast.wasm  20000412-4.c.s.wast.wasm  20000412-5.c.s.wast.wasm  20000412-6.c.s.wast.wasm  20000419-1.c.s.wast.wasm  20000422-1.c.s.wast.wasm  20000503-1.c.s.wast.wasm  20000511-1.c.s.wast.wasm  20000519-1.c.s.wast.wasm  20000519-2.c.s.wast.wasm  20000523-1.c.s.wast.wasm  20000528-1.c.s.wast.wasm  20000603-1.c.s.wast.wasm  20000605-1.c.s.wast.wasm  20000605-2.c.s.wast.wasm  20000605-3.c.s.wast.wasm  20000622-1.c.s.wast.wasm  20000703-1.c.s.wast.wasm  20000706-1.c.s.wast.wasm  20000706-2.c.s.wast.wasm  20000706-3.c.s.wast.wasm  20000706-4.c.s.wast.wasm  20000706-5.c.s.wast.wasm  20000707-1.c.s.wast.wasm  20000715-1.c.s.wast.wasm  (+1169 more)
spec/src/: fixtures.rs  lib.rs  run.rs  test.rs  torture.rs
src/: io.rs  lib.rs
src/builder/: code.rs  data.rs  export.rs  global.rs  import.rs  invoke.rs  memory.rs  misc.rs  mod.rs  module.rs  table.rs
src/common/: mod.rs  stack.rs
src/elements/: export_entry.rs  func.rs  global_entry.rs  import_entry.rs  index_map.rs  mod.rs  module.rs  name_section.rs  ops.rs  primitives.rs  reloc_section.rs  section.rs  segment.rs  types.rs
src/interpreter/: emscripten.rs  env.rs  env_native.rs  func.rs  global.rs  host.rs  imports.rs  memory.rs  mod.rs  module.rs  native.rs  program.rs  runner.rs  stack.rs  state.rs  store.rs  table.rs  utils.rs  validator.rs  value.rs  variable.rs
src/parity_wasm/: io.rs.html  lib.rs.html
src/validation/: context.rs  func.rs  mod.rs  module.rs  tests.rs
testsuite/: Cargo.toml
testsuite/src/: lib.rs  run.rs
(+205 files in other folders)
