[package]
name = "parity-wasm"
version = "0.38.0"
authors = ["Nikolay Volf <nikvolf@gmail.com>", "Svyatoslav Nikolsky <svyatonik@yandex.ru>", "Sergey Shulepov <s.pepyakin@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/parity-wasm"
homepage = "https://github.com/paritytech/parity-wasm"
documentation = "https://paritytech.github.io/parity-wasm/parity_wasm/"
description = "WebAssembly binary format serialization/deserialization/interpreter"
keywords = ["wasm", "webassembly", "bytecode", "serde", "interpreter"]
categories = ["wasm", "parser-implementations"]
exclude = [ "res/*", "spec/*" ]
edition = "2018"

[dev-dependencies]
time = "0.1"

[features]
default = ["std"]
std = []

#
# Features for enabling non-MVP proposals.
#

# Atomics aka threading.
# https://github.com/webassembly/threads/blob/master/proposals/threads/Overview.md
atomics = []

# SIMD
# https://github.com/WebAssembly/simd/blob/master/proposals/simd/SIMD.md
simd = []

# Sign-extension operators
# https://github.com/WebAssembly/sign-extension-ops/blob/master/proposals/sign-extension-ops/Overview.md
sign_ext = []
