[package]
name = "parity-wasm"
version = "0.40.3"
authors = ["Nikolay Volf <nikvolf@gmail.com>", "Svyatoslav Nikolsky <svyatonik@yandex.ru>", "Sergey Shulepov <s.pepyakin@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/parity-wasm"
homepage = "https://github.com/paritytech/parity-wasm"
documentation = "https://paritytech.github.io/parity-wasm/parity_wasm/"
description = "WebAssembly low-level format library"
keywords = ["wasm", "webassembly", "bytecode", "serde", "interpreter"]
categories = ["wasm", "parser-implementations"]
exclude = [ "res/*", "spec/*" ]
edition = "2018"

[dev-dependencies]
time = "0.1"

[features]
default = ["std"]
std = []

#
# Features for enabling non-MVP proposals.
# These features should be tested as part of Travis CI build.
#

# Atomics aka threading.
# https://github.com/webassembly/threads/
atomics = []

# SIMD
# https://github.com/WebAssembly/simd/
simd = []

# Sign-extension operators
# https://github.com/WebAssembly/sign-extension-ops/
sign_ext = []

# Bulk-memory operators
# https://github.com/WebAssembly/bulk-memory-operations/
bulk = []
