[package]
name = "parity-wasm-testsuite"
version = "0.0.0"
authors = ["NikVolf <nikvolf@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/nikvolf/parity-wasm"
homepage = "https://github.com/nikvolf/parity-wasm"
description = "parity-wasm testsuite"
edition = "2018"

[dependencies]
wast = "38"
parity-wasm = { path = ".." }
